Changes for Perl extension Template-Tiny

0.11 Tue 26 Jan 2010
	- Adding preparse-specific test script

0.10 Sun 24 Jan 2010
	- The use of the constructor is now compulsory, as per Template.pm
	- Adding support for constructor params
	- Adding support for constructor TRIM param
	- The process method now works in both static and instance modes

0.09 Wed 16 Dec 2009
	- Adding support for "private" _foo keys

0.08 Sun 13 Dec 2009
	- Removing some minor code no longer needed.
	- Updating the POD documentation

0.07 Sun 13 Dec 2009
	- Recursion is now processed top to bottom
	- Added support for FOREACH

0.06 Sun 13 Dec 2009
	- Added support for nested [% IF %] and [% UNLESS %] conditions

0.05 Thu 10 Dec 2009
	- Expression chains in a condition that terminate in an object
	  will boolify the object instead of stringifying it + tests for it

0.04 Thu 10 Dec 2009
	- Reduced implementation by 8kb
	- As a side effect of this, added support for UNLESS/ELSE
	- Matching behaviour of TT to NOT chomp on -%](space)(EOF)
	- Switch to Tiny-style Makefile.PL

0.03 Thu 10 Dec 2009
	- Bug fix for methods in expressions
	- Added test case for method calls

0.02 Tue  8 Dec 2009
	- Added support for [%- -%]
	- Added support for recursive simple expressions
	- Added support for [% IF expr %]
	- Added support for [% UNLESS expr %]
	- Added support for [% ELSE %]

0.01 Sun  6 Dec 2009
	- Created initial release